--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -20,5 +20,6 @@ Abandoned: Abandoned
 project.description.glue_php: 'PHP framework for creating single page applications.'
 'Lastest blog posts': 'Lastest blog posts'
 'Read more': 'Read more'
-section.description.contact: 'To contact us you can write to: <br> thenlabs@gmail.com'
+section.description.contact: 'To contact us you can write to: <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a>'
 section.description.social_networks: 'Subscribe to our social networks if you want to stay informed. <br> Soon we will be releasing our blog and we will share the articles for them.'
+Translations: Translations
