--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -23,3 +23,4 @@ project.description.glue_php: 'PHP framework for creating single page applicatio
 section.description.contact: 'To contact us you can write to: <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a>'
 section.description.social_networks: 'Subscribe to our social networks if you want to stay informed. <br> Soon we will be releasing our blog and we will share the articles for them.'
 Translations: Translations
+about_title: Know About Us
