--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -23,3 +23,4 @@ project.description.glue_php: 'Framework PHP para crear aplicaciones de una sola
 section.description.social_networks: 'Suscríbase a nuestras redes sociales si desea mantenerse informado. <br> Próximamente estaremos estrenando nuestro blog y compartiremos los artículos por las mismas.'
 section.description.contact: 'Para contactarnos puede escribirnos a: <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a>'
 Translations: Traducciones
+about_title: Conózcanos
