--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -24,3 +24,4 @@ section.description.social_networks: 'Suscríbase a nuestras redes sociales si d
 section.description.contact: 'Para contactarnos puede escribirnos a: <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a>'
 Translations: Traducciones
 about_title: Conózcanos
+'Insert ad here': 'Insertar anuncio aquí'
