--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -25,3 +25,5 @@ section.description.social_networks: 'Subscribe to our social networks if you wa
 Translations: Translations
 about_title: 'Know About Us'
 'Insert ad here': 'Insert ad here'
+publication_date: 'Publication Date'
+see_the_whole_blog: See the whole blog
