--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -25,3 +25,5 @@ section.description.contact: 'Para contactarnos puede escribirnos a: <br> <a hre
 Translations: Traducciones
 about_title: Conózcanos
 'Insert ad here': 'Insertar anuncio aquí'
+publication_date: 'Fecha de publicación'
+see_the_whole_blog: Ver todo el blog
