--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -26,4 +26,5 @@ Translations: Translations
 about_title: 'Know About Us'
 'Insert ad here': 'Insert ad here'
 publication_date: 'Publication Date'
-see_the_whole_blog: See the whole blog
+see_the_whole_blog: 'See the whole blog'
+improve_this_doc: Improve this doc
