--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -26,4 +26,5 @@ Translations: Traducciones
 about_title: Conózcanos
 'Insert ad here': 'Insertar anuncio aquí'
 publication_date: 'Fecha de publicación'
-see_the_whole_blog: Ver todo el blog
+see_the_whole_blog: 'Ver todo el blog'
+improve_this_doc: Mejorar este documento
