--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -27,4 +27,4 @@ about_title: 'Know About Us'
 'Insert ad here': 'Insert ad here'
 publication_date: 'Publication Date'
 see_the_whole_blog: 'See the whole blog'
-improve_this_doc: Improve this doc
+improve_this_doc: Edit this document
