--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -27,4 +27,4 @@ about_title: Conózcanos
 'Insert ad here': 'Insertar anuncio aquí'
 publication_date: 'Fecha de publicación'
 see_the_whole_blog: 'Ver todo el blog'
-improve_this_doc: Mejorar este documento
+improve_this_doc: Editar este documento
