--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -28,4 +28,5 @@ about_title: 'Know About Us'
 publication_date: 'Publication Date'
 see_the_whole_blog: 'See the whole blog'
 improve_this_doc: 'Edit this document'
-see_projects: See Projects
+see_projects: 'See Projects'
+donate_to_thenlabs: Supports to ThenLabs
