--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -28,4 +28,5 @@ about_title: Conózcanos
 publication_date: 'Fecha de publicación'
 see_the_whole_blog: 'Ver todo el blog'
 improve_this_doc: 'Editar este documento'
-see_projects: Ver Proyectos
+see_projects: 'Ver Proyectos'
+donate_to_thenlabs: Apoye a ThenLabs
