--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -29,4 +29,8 @@ publication_date: 'Fecha de publicación'
 see_the_whole_blog: 'Ver todo el blog'
 improve_this_doc: 'Editar este documento'
 see_projects: 'Ver Proyectos'
-donate_to_thenlabs: Apoye a ThenLabs
+supports_to_thenlabs: 'Apoye a ThenLabs'
+thanks_for_wanting_to_support_us: 'Gracias por querer apoyarnos'
+donate_bitcoins: 'Donar Bitcoins'
+donate_to_bitcoin_address_message: 'Donar a la dirección bitcoin: <b>[[address]]</b>'
+received_donation_message: 'Se ha recibido una donación de <b>[[value]] BTC</b>. Muchas Gracias.'
