--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -29,4 +29,8 @@ publication_date: 'Publication Date'
 see_the_whole_blog: 'See the whole blog'
 improve_this_doc: 'Edit this document'
 see_projects: 'See Projects'
-donate_to_thenlabs: Supports to ThenLabs
+supports_to_thenlabs: 'Supports to ThenLabs'
+thanks_for_wanting_to_support_us: 'Thanks for wanting to support us'
+donate_bitcoins: 'Donate bitcoins'
+donate_to_bitcoin_address_message: 'Please Donate To Bitcoin Address: <b>[[address]]</b>'
+received_donation_message: 'Donation of <b>[[value]] BTC</b> Received. Thank You.'
