--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -34,3 +34,4 @@ thanks_for_wanting_to_support_us: 'Gracias por querer apoyarnos'
 donate_bitcoins: 'Donar Bitcoins'
 donate_to_bitcoin_address_message: 'Donar a la dirección bitcoin: <b>[[address]]</b>'
 received_donation_message: 'Se ha recibido una donación de <b>[[value]] BTC</b>. Muchas Gracias.'
+donate_title: Apoye el desarrollo de StratusPHP.
