--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -35,3 +35,4 @@ donate_bitcoins: 'Donar Bitcoins'
 donate_to_bitcoin_address_message: 'Donar a la dirección bitcoin: <b>[[address]]</b>'
 received_donation_message: 'Se ha recibido una donación de <b>[[value]] BTC</b>. Muchas Gracias.'
 donate_title: 'Apoye el desarrollo de StratusPHP.'
+contribute_title: Contribuir
