--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -36,3 +36,5 @@ donate_to_bitcoin_address_message: 'Donar a la dirección bitcoin: <b>[[address]
 received_donation_message: 'Se ha recibido una donación de <b>[[value]] BTC</b>. Muchas Gracias.'
 donate_title: 'Apoye el desarrollo de StratusPHP.'
 contribute: Contribuir
+project.description.stratus_php: 'Framework PHP para crear aplicaciones de una sola página (SPA).'
+new: Nuevo
