--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -39,3 +39,4 @@ contribute: Contribuir
 project.description.stratus_php: 'Framework PHP para crear aplicaciones de una sola página (SPA).'
 new: Nuevo
 project.description.website: 'El proyecto de este sitio web basado en Symfony.'
+project.description.http_server: 'Un servidor HTTP escrito en PHP con la ayuda de los componentes Symfony.'
