--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -20,7 +20,7 @@ Abandoned: Abandonado
 project.description.glue_php: 'Framework PHP para crear aplicaciones de una sola página (SPA).'
 'Lastest blog posts': 'Últimas entradas del blog'
 'Read more': 'Seguir leyendo'
-section.description.social_networks: 'Suscríbase a nuestras redes sociales si desea mantenerse informado. <br> Próximamente estaremos estrenando nuestro blog y compartiremos los artículos por las mismas.'
+section.description.social_networks: 'Suscríbase también a nuestras redes sociales. <br> También por esos canales compartiremos nuestras novedades.'
 section.description.contact: 'Para contactarnos puede escribirnos a: <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a>'
 Translations: Traducciones
 about_title: Conózcanos
