--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -21,7 +21,7 @@ project.description.glue_php: 'PHP framework for creating single page applicatio
 'Lastest blog posts': 'Lastest blog posts'
 'Read more': 'Read more'
 section.description.contact: 'To contact us you can write to: <br> <a href="mailto:thenlabs@gmail.com">thenlabs@gmail.com</a>'
-section.description.social_networks: 'Subscribe to our social networks if you want to stay informed. <br> Soon we will be releasing our blog and we will share the articles for them.'
+section.description.social_networks: 'Also subscribe to our social networks. <br> Also through these channels we will share our news.'
 Translations: Translations
 about_title: 'Know About Us'
 'Insert ad here': 'Insert ad here'
