--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -38,5 +38,8 @@ donate_title: 'Apoye el desarrollo de StratusPHP.'
 contribute: Contribuya
 project.description.stratus_php: 'Framework PHP para crear aplicaciones de una sola página (SPA).'
 new: Nuevo
+newsletter_subscription_info: 'Si desea enterarse por correo electrónico sobre nuestras próximas publicaciones y novedades en general, suscríbase a nuestro boletín.'
+enter_your_email: 'Introduzca su correo electrónico.'
+subscribe_me: 'Suscribirme'
 project.description.website: 'El proyecto de este sitio web basado en Symfony.'
 project.description.http_server: 'Un servidor HTTP escrito en PHP con la ayuda de los componentes Symfony.'
