--- a/translations/messages+intl-icu.es.yaml
+++ b/translations/messages+intl-icu.es.yaml
@@ -43,5 +43,7 @@ enter_your_email: 'Introduzca su correo electrónico.'
 subscribe_me: 'Suscribirme'
 subscriber_already_exists: 'Usted ya está suscrito a nuestra lista de correo.'
 subscription_successful: 'Gracias por suscribirse a nuestra lista de correo. Solo falta que valide su correo electrónico y para ello debe visitar el enlace que le acabamos de enviar al mismo.'
+email_verified: 'Correo verificado'
+email_verified_comments: 'Gracias por verificar su correo. <br> En lo adelante le informaremos de nuestros nuevos contenidos que consideremos relevantes, <br> no obstante, en todo momento usted podrá cancelar su suscripción si así lo desea.'
 project.description.website: 'El proyecto de este sitio web basado en Symfony.'
 project.description.http_server: 'Un servidor HTTP escrito en PHP con la ayuda de los componentes Symfony.'
