--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -45,5 +45,7 @@ subscriber_already_exists: 'You are already subscribed to our email list.'
 subscription_successful: 'Thank you for subscribing to our mailing list. You just need to validate your email and for this you must visit the link that we just sent to it.'
 email_verified: 'Verified email'
 email_verified_comments: 'Thanks for checking your email. <br> From now on we will inform you of our new content that we consider relevant, <br> however, at any time you can cancel your subscription if you wish.'
+verify_your_email: 'Verify your email'
+verify_your_email_content: 'To complete the subscription to the ThenLabs email newsletter visit the following link: <br> <br> <a href="%URL%">Check email</a> <br> <br> In case you have received this mail by mistake just ignore it.'
 project.description.website: 'The project of this website based on Symfony.'
 project.description.http_server: 'A HTTP Server written in PHP with help of the Symfony components.'
