--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -46,6 +46,6 @@ subscription_successful: 'Thank you for subscribing to our mailing list. You jus
 email_verified: 'Verified email'
 email_verified_comments: 'Thanks for checking your email. <br> From now on we will inform you of our new content that we consider relevant, <br> however, at any time you can cancel your subscription if you wish.'
 verify_your_email: 'Verify your email'
-verify_your_email_content: 'To complete the subscription to the ThenLabs email newsletter visit the following link: <br> <br> <a href="%URL%">Check email</a> <br> <br> In case you have received this mail by mistake just ignore it.'
+verify_your_email_content: 'To complete the subscription to the ThenLabs email newsletter visit the following link: <br> <br> <a href="%URL%" target="_blank">Check email</a> <br> <br> In case you have received this mail by mistake just ignore it.'
 project.description.website: 'The project of this website based on Symfony.'
 project.description.http_server: 'A HTTP Server written in PHP with help of the Symfony components.'
